--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,7 @@ dist/
 # TernJS port file
 .tern-port
 
-src/fonts/tmp
-src/tiles/inputs
-src/tiles/tmp
+local/
+src/fonts/tmp/
+src/tiles/inputs/
+src/tiles/tmp/
