--- a/package.json
+++ b/package.json
@@ -11,24 +11,31 @@
   "scripts": {
     "compress": "cd dist && tar --exclude='*.DS_Store' -zcf atlas-styles.tar.gz fonts sprites styles tiles",
     "extract": "tar -xf dist/atlas-styles.tar.gz --directory static",
-    "fonts": "node src/fonts/index.js",
-    "labels": "node src/tiles/labels.js",
-    "sprites": "node src/sprites/index.js",
-    "styles": "node src/styles/index.js",
+    "fonts": "rm -rf dist/fonts && ts-node src/fonts && rm -rf src/fonts/tmp",
+    "labels": "ts-node src/tiles/labels.js",
+    "sprites": "rm -rf dist/sprites && ts-node src/sprites",
+    "styles": "rm -rf dist/styles && rm -rf local/styles && ts-node src/styles",
     "sync": "aws s3 sync dist s3://fieldmaps-atlas --exclude '*.DS_Store'",
     "sync-rm": "aws s3 rm s3://fieldmaps-atlas --recursive --exclude '*' --include '*.DS_Store'",
-    "tiles": "node src/tiles/index.js"
+    "tiles": "rm -rf src/tiles/tmp && rm -rf dist/tiles && ts-node src/tiles && rm -rf src/tiles/tmp"
   },
   "dependencies": {
     "@mapbox/spritezero": "^6.2.0-dev",
     "@turf/turf": "^5.1.6",
     "d3-dsv": "^1.2.0",
     "fontnik": "^0.5.3",
+    "glob": "^7.1.6",
     "glyph-pbf-composite": "^0.0.2",
     "polylabel": "^1.0.2",
-    "tippecanoe": "^0.5.0"
+    "tippecanoe": "^0.5.0",
+    "ts-node": "^8.6.2"
   },
   "devDependencies": {
-    "svgo": "^1.3.2"
+    "@types/d3-dsv": "^1.0.36",
+    "@types/glob": "^7.1.1",
+    "@types/node": "^13.5.0",
+    "@types/polylabel": "^1.0.5",
+    "svgo": "^1.3.2",
+    "typescript": "^3.7.5"
   }
 }
