--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sync": "s3cmd sync dist/ s3://fieldmapstiles/ --delete-removed --acl-public --exclude '.DS_Store'",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "compress": "rm -f dist/tiles.tar.gz && cd dist && tar --exclude='*.DS_Store' -zcf tiles.tar.gz fonts sprites styles v4",
-    "upload": "s3cmd put dist/tiles.tar.gz s3://fieldmapsdata/",
+    "upload": "s3cmd put dist/tiles.tar.gz s3://fieldmapsdata/ --acl-public",
     "download": "curl https://data.fieldmaps.io/tiles.tar.gz --output tiles.tar.gz",
     "extract": "tar -xf tiles.tar.gz --directory public && rm tiles.tar.gz",
     "build": "yarn download && mkdir -p public && yarn extract"
