delete old files and use one source per layer approach to styling

--- a/package.json
+++ b/package.json
@@ -8,25 +8,16 @@
   "scripts": {
     "styles": "HOST=http://localhost:8080 ts-node src/styles",
     "tile-json": "HOST=http://localhost:8080 ts-node src/tile-json",
-    "tile-labels": "src/tile-labels/run.sh",
-    "tile-filter": "ts-node src/tiles/filter.ts",
-    "tiles": "src/tiles/land.sh && src/tiles/adm-labels.sh && src/tiles/adm-lines.sh && src/tiles/tile-join.sh",
-    "serve": "http-server dist",
+    "tiles": "src/tiles/tippecanoe.sh && src/tiles/tile-join.sh",
+    "develop": "http-server dist",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "rm": "s3cmd rm s3://fieldmapstiles/ --force --recursive",
     "put": "s3cmd put dist/* s3://fieldmapstiles/ --recursive --acl-public --exclude '.DS_Store'",
     "upload": "yarn rm && yarn put"
   },
-  "dependencies": {
-    "@turf/turf": "^5.1.6",
-    "ndjson": "^2.0.0",
-    "polylabel": "^1.1.0",
-    "yargs": "^16.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/ndjson": "^2.0.0",
-    "@types/polylabel": "^1.0.5",
-    "@types/yargs": "^15.0.12",
+    "@types/node": "^14.14.20",
     "http-server": "^0.12.3",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
