split up admin and osm processing

--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "author": "Max Malynowsky",
   "license": "MIT",
   "scripts": {
-    "prod": "ts-node src/styles && ts-node src/tile-json",
     "dev": "HOST=http://localhost:8080 ts-node src/styles && HOST=http://localhost:8080 ts-node src/tile-json",
-    "tiles": "src/tiles/tippecanoe.sh; src/tiles/tile-join.sh",
-    "develop": "http-server dist",
+    "develop": "yarn dev && http-server dist",
+    "prod": "ts-node src/styles && ts-node src/tile-json",
+    "tiles-adm0": "src/tiles/adm0.sh",
+    "tiles-adm": "src/tiles/adm.sh",
+    "tiles-osma": "src/tiles/osma.sh",
+    "tiles-osml": "src/tiles/osml.sh",
+    "tiles-osmp": "src/tiles/osmp.sh",
+    "tiles-join": "src/tiles/join.sh",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^14.14.22",
+    "@types/node": "^14.14.25",
     "http-server": "^0.12.3",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
