--- a/package.json
+++ b/package.json
@@ -6,23 +6,18 @@
   "author": "Max Malynowsky",
   "license": "MIT",
   "scripts": {
-    "dev": "HOST=http://localhost:8080 ts-node src/styles && HOST=http://localhost:8080 ts-node src/tile-json",
-    "develop": "yarn dev && http-server dist",
-    "prod": "ts-node src/styles && ts-node src/tile-json",
-    "tiles-adm0": "src/tiles/adm0.sh",
-    "tiles-adm": "src/tiles/adm.sh",
-    "tiles-osma": "src/tiles/osma.sh",
-    "tiles-osml": "src/tiles/osml.sh",
-    "tiles-osmp": "src/tiles/osmp.sh",
-    "tiles-join": "src/tiles/join.sh",
+    "dev": "HOST=http://localhost:8080 ts-node src",
+    "develop": "yarn dev && http-server --cors -c-1 dist",
+    "prod": "ts-node src",
+    "tile-join": "src/tile-join.sh",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^14.14.25",
+    "@types/node": "^14.14.31",
     "http-server": "^0.12.3",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.2"
   }
 }
