--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "atlas-styles",
+  "name": "tiles",
   "main": "index.js",
   "version": "1.0.0",
-  "repository": "https://github.com/fieldmaps/styles",
+  "repository": "https://github.com/fieldmaps/tiles",
   "author": "Max Malynowsky",
   "license": "MIT",
   "scripts": {
-    "dev": "HOST=http://localhost:8080 ts-node src",
-    "develop": "yarn dev && http-server --cors -c-1 dist",
-    "prod": "ts-node src",
-    "tile-join": "src/tile-join.sh",
+    "build": "ts-node src",
+    "develop": "yarn build && tileserver-gl-light --config dist/config.json",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "tileserver-gl-light": "^3.1.1"
+  },
   "devDependencies": {
-    "@types/node": "^14.14.31",
-    "http-server": "^0.12.3",
-    "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.2"
+    "@types/node": "^17.0.10",
+    "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
